<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    tools:context=".ui.main.LoginActivity">
    <LinearLayout
        android:id="@+id/e_case"
        android:layout_above="@id/login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t_hash"
            android:layout_width="match_parent"
            app:endIconMode="custom"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/user_hash"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_hash"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/t_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/user_device"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_device"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/login"
        android:layout_above="@id/version_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:text="Код проекта на GitHub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_github"
                android:text="Перейти"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/btn_copy_github"
                android:text="Скопировать"
                android:textAllCaps="false"
                android:layout_margin="20dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/version_name"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:text="Версия продукта: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/t_product_version"
            android:text="560"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>